--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reuters.com/article/us-trump-effect-solar-insight/billions-in-u-s-solar-projects-shelved-after-trump-panel-tariff-idUSKCN1J30CT">Billions in U.S. solar projects shelved after Trump panel tariff</a>
+                                    <a href="https://www.tomshardware.com/news/intel-28-core-cpu-5ghz,37244.html">Intel: We 'Forgot' to Mention 28-Core, 5-GHz CPU Demo Was Overclocked</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17256522">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17263651">
                                         
-                                            174 comments
+                                            72 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rgbrenner">rgbrenner</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528384637"
+                                            href="https://news.ycombinator.com/user?id=buserror">buserror</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528447440"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    212 points
+                                    213 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528461605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528462205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
