--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -491,7 +491,7 @@
                                             href="https://news.ycombinator.com/user?id=codentropy">codentropy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528411873"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    181 points
+                                    183 points
                                 </span>
                             </td>
                         </tr>
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/technology/2018/jun/06/planned-laws-to-force-tech-firms-to-reveal-encrypted-data">Australia drafts laws forcing Facebook and Google to reveal encrypted data</a>
+                                    <a href="https://www.bbc.com/news/world-us-canada-44414747">Anthony Bourdain has died</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17245032">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17264376">
                                         
-                                            68 comments
+                                            81 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Ours90">Ours90</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528270095"
+                                            href="https://news.ycombinator.com/user?id=chewymouse">chewymouse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528458216"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     178 points
                                 </span>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.anandtech.com/show/12912/amd-zen-2-update-7nm-epyc-in-labs-now-launching-in-2019">AMD Zen 2 Update: 7nm EPYC in Labs Now, Launching in 2019</a>
+                                    <a href="https://www.theguardian.com/technology/2018/jun/06/planned-laws-to-force-tech-firms-to-reveal-encrypted-data">Australia drafts laws forcing Facebook and Google to reveal encrypted data</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17245025">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17245032">
                                         
-                                            73 comments
+                                            68 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528269997"
+                                            href="https://news.ycombinator.com/user?id=Ours90">Ours90</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528270095"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    175 points
+                                    178 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528462205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528462805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
