--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.tomshardware.com/news/intel-28-core-cpu-5ghz,37244.html">Intel: We 'Forgot' to Mention 28-Core, 5-GHz CPU Demo Was Overclocked</a>
+                                    <a href="https://www.reuters.com/article/us-monsanto-m-a-bayer-closing/bayer-to-close-monsanto-takeover-to-retire-targets-name-idUSKCN1J00IZ?il=0">Bayer to retire Monsanto name</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17263651">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17226243">
                                         
-                                            91 comments
+                                            205 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=buserror">buserror</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528447440"
+                                            href="https://news.ycombinator.com/user?id=fgeorgy">fgeorgy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528106805"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    259 points
+                                    260 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528467604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528468205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
