--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=e_ameisen">e_ameisen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528387842"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    207 points
+                                    208 points
                                 </span>
                             </td>
                         </tr>
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=david4096">david4096</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528446367"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    189 points
+                                    190 points
                                 </span>
                             </td>
                         </tr>
@@ -461,13 +461,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17262510">
                                         
-                                            165 comments
+                                            168 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=gscott">gscott</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528431017"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    188 points
+                                    190 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.anandtech.com/show/12912/amd-zen-2-update-7nm-epyc-in-labs-now-launching-in-2019">AMD Zen 2 Update: 7nm EPYC in Labs Now, Launching in 2019</a>
+                                    <a href="https://www.bloomberg.com/graphics/2015-paul-ford-what-is-code/">What is code</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17245025">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17259483">
                                         
-                                            74 comments
+                                            31 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528269997"
+                                            href="https://news.ycombinator.com/user?id=henridf">henridf</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528400466"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     175 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528473004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528473605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
