--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.cntraveler.com/story/nearly-80-percent-of-japans-airbnbs-were-just-removed">Nearly 80% of Japan’s Airbnbs removed in response to new home-share law</a>
+                                    <a href="https://www.theguardian.com/technology/2018/jun/06/planned-laws-to-force-tech-firms-to-reveal-encrypted-data">Australia drafts laws forcing Facebook and Google to reveal encrypted data</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17263565">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17245032">
                                         
-                                            152 comments
+                                            68 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528446147"
+                                            href="https://news.ycombinator.com/user?id=Ours90">Ours90</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528270095"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    175 points
+                                    178 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528477205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528477806" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
