--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -245,13 +245,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17257725">
                                         
-                                            182 comments
+                                            184 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=johnny313">johnny313</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528390715"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    175 points
+                                    176 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.coinbase.com/our-path-to-listing-sec-regulated-crypto-securities-a1724e13bb5a">Our path to listing SEC-regulated crypto securities</a>
+                                    <a href="https://www.dannyguo.com/blog/the-decline-of-the-macbook-pro/">The Decline of the MacBook Pro</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17252322">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17266492">
                                         
-                                            146 comments
+                                            174 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=troydavis">troydavis</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528331535"
+                                            href="https://news.ycombinator.com/user?id=dguo">dguo</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528472263"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    152 points
+                                    153 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528480204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528480806" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
