--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=doppp">doppp</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528417708"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    228 points
+                                    229 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reuters.com/article/us-trump-effect-solar-insight/billions-in-u-s-solar-projects-shelved-after-trump-panel-tariff-idUSKCN1J30CT">Billions in U.S. solar projects shelved after Trump panel tariff</a>
+                                    <a href="https://github.com/higgsfield/RL-Adventure-2">Reinforcement Learning: From Zero to State of the Art with Pytorch 4</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17256522">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17261063">
                                         
-                                            179 comments
+                                            14 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rgbrenner">rgbrenner</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528384637"
+                                            href="https://news.ycombinator.com/user?id=codentropy">codentropy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528411873"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     212 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528480204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528480806" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
