--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=doppp">doppp</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528417708"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    229 points
+                                    230 points
                                 </span>
                             </td>
                         </tr>
@@ -311,17 +311,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.spinics.net/lists/linux-crypto/msg33291.html">Linux Cryptography: Speck's real standing with the academic community</a>
+                                    <a href="https://ipfs.io/ipfs/QmNURh26yenpqK5hK3ahRZhQJsaUttumepjtRWiVZXhnN1/p/webrtc-ipfs-chat.html">WebRTC Chat on IPFS</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214827">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17263589">
                                         
-                                            108 comments
+                                            70 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=zx2c4">zx2c4</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527951245"
+                                            href="https://news.ycombinator.com/user?id=david4096">david4096</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528446367"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     226 points
                                 </span>
@@ -335,19 +335,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://ipfs.io/ipfs/QmNURh26yenpqK5hK3ahRZhQJsaUttumepjtRWiVZXhnN1/p/webrtc-ipfs-chat.html">Serverless WebRTC Chat on IPFS</a>
+                                    <a href="https://www.spinics.net/lists/linux-crypto/msg33291.html">Linux Cryptography: Speck's real standing with the academic community</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17263589">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214827">
                                         
-                                            68 comments
+                                            108 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=david4096">david4096</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528446367"
+                                            href="https://news.ycombinator.com/user?id=zx2c4">zx2c4</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527951245"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    223 points
+                                    226 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528483205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528483805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
