--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -485,13 +485,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17259082">
                                         
-                                            377 comments
+                                            379 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dannyrosen">dannyrosen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528398267"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    606 points
+                                    608 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://ekeler.com/game-boy-camera-canon-ef-mount/">Game Boy Camera Canon EF Lens Mount</a>
+                                    <a href="https://www.bbc.com/news/world-us-canada-44414747">Anthony Bourdain has died</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217827">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17264376">
                                         
-                                            30 comments
+                                            284 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rainbowmverse">rainbowmverse</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527998189"
+                                            href="https://news.ycombinator.com/user?id=chewymouse">chewymouse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528458216"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    490 points
+                                    494 points
                                 </span>
                             </td>
                         </tr>
@@ -609,7 +609,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528483205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528483805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
