--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bbc.com/news/world-us-canada-44414747">Anthony Bourdain has died</a>
+                                    <a href="http://ekeler.com/game-boy-camera-canon-ef-mount/">Game Boy Camera Canon EF Lens Mount</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17264376">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217827">
                                         
-                                            284 comments
+                                            30 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=chewymouse">chewymouse</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528458216"
+                                            href="https://news.ycombinator.com/user?id=rainbowmverse">rainbowmverse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527998189"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    489 points
+                                    490 points
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=nwrk">nwrk</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528388325"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    481 points
+                                    482 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528483205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528483805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
