--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=kevin_bloch">kevin_bloch</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528377578"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    197 points
+                                    198 points
                                 </span>
                             </td>
                         </tr>
@@ -509,7 +509,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17266492">
                                         
-                                            227 comments
+                                            233 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dguo">dguo</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.anandtech.com/show/12912/amd-zen-2-update-7nm-epyc-in-labs-now-launching-in-2019">AMD Zen 2 Update: 7nm EPYC in Labs Now, Launching in 2019</a>
+                                    <a href="https://www.destroyallsoftware.com/blog/2017/the-biggest-and-weirdest-commits-in-linux-kernel-git-history">The Biggest and Weirdest Commits in Linux Kernel Git History (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17245025">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265151">
                                         
-                                            74 comments
+                                            45 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528269997"
+                                            href="https://news.ycombinator.com/user?id=swsieber">swsieber</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528464958"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     175 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528487405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528488004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
