--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://ipfs.io/ipfs/QmNURh26yenpqK5hK3ahRZhQJsaUttumepjtRWiVZXhnN1/p/webrtc-ipfs-chat.html">WebRTC Chat on IPFS</a>
+                                    <a href="https://godotengine.org/article/godot-gets-brand-new-animation-editor-cinematic-support">Godot gets a brand new animation editor with cinematic support</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17263589">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17261572">
                                         
-                                            72 comments
+                                            43 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=david4096">david4096</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528446367"
+                                            href="https://news.ycombinator.com/user?id=doppp">doppp</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528417708"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    232 points
+                                    233 points
                                 </span>
                             </td>
                         </tr>
@@ -341,7 +341,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17263565">
                                         
-                                            226 comments
+                                            228 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528487405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528488004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
