--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://godotengine.org/article/godot-gets-brand-new-animation-editor-cinematic-support">Godot gets a brand new animation editor with cinematic support</a>
+                                    <a href="http://www.typescriptlang.org/docs/handbook/release-notes/typescript-2-9.html">TypeScript 2.9 is now available</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17261572">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17242026">
                                         
-                                            43 comments
+                                            58 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=doppp">doppp</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528417708"
+                                            href="https://news.ycombinator.com/user?id=hamstercat">hamstercat</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528232589"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    233 points
+                                    234 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528489805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528490405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
