--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -485,13 +485,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17259082">
                                         
-                                            392 comments
+                                            393 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dannyrosen">dannyrosen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528398267"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    617 points
+                                    619 points
                                 </span>
                             </td>
                         </tr>
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=chewymouse">chewymouse</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528458216"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    528 points
+                                    529 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.bbc.com/news/technology-44368813">Microsoft has sunk a data centre in the sea to investigate energy efficiency</a>
+                                    <a href="https://www.nature.com/articles/d41586-018-05357-w">Sucking carbon dioxide from air is cheaper than scientists thought</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17244525">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17260500">
                                         
-                                            373 comments
+                                            268 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Qworg">Qworg</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528262398"
+                                            href="https://news.ycombinator.com/user?id=kjeetgill">kjeetgill</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528407338"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     510 points
                                 </span>
@@ -609,7 +609,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528494605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528495204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
