--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17248436" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
+                                    <a href="https://github.com/jacobbogers/blasjs">Blasjs – Pure Javascript implementation of BLAS</a>
                                 </span>
                             </td>
                         </tr>
@@ -491,7 +491,7 @@
                                             href="https://news.ycombinator.com/user?id=dannyrosen">dannyrosen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528398267"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    619 points
+                                    620 points
                                 </span>
                             </td>
                         </tr>
@@ -533,13 +533,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17264376">
                                         
-                                            303 comments
+                                            305 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=chewymouse">chewymouse</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528458216"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    529 points
+                                    530 points
                                 </span>
                             </td>
                         </tr>
@@ -609,7 +609,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528495204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528495805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
