--- a/jobs/page3.html
+++ b/jobs/page3.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17248436" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
+                                    <a href="https://github.com/jacobbogers/blasjs">Blasjs – Pure Javascript implementation of BLAS</a>
                                 </span>
                             </td>
                         </tr>
@@ -591,7 +591,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528495204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528495805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
