--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17248436" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
+                                    <a href="https://github.com/jacobbogers/blasjs">Blasjs – Pure Javascript implementation of BLAS</a>
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=MBCook">MBCook</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528421637"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    330 points
+                                    331 points
                                 </span>
                             </td>
                         </tr>
@@ -509,13 +509,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17263565">
                                         
-                                            253 comments
+                                            257 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528446147"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    248 points
+                                    249 points
                                 </span>
                             </td>
                         </tr>
@@ -557,7 +557,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17263589">
                                         
-                                            75 comments
+                                            76 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=david4096">david4096</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528495204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528495805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
