--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lyrebird.ai/">Lyrebird: ultra-realistic artificial voices</a>
+                                    <a href="https://www.theguardian.com/commentisfree/2018/jun/08/trump-master-negotiator-meeting-kim-jong-un-art-of-deal">Trump is a useless negotiator, and Kim Jong-un will know that</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265910">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17269579">
                                         
-                                            1 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=adbrebs">adbrebs</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528469183"
+                                            href="https://news.ycombinator.com/user?id=robaato">robaato</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528491049"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    18 points
+                                    7 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528504804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528505403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
