--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -245,13 +245,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17268949">
                                         
-                                            165 comments
+                                            166 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=oli5679">oli5679</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528486351"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    168 points
+                                    170 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://sqlite.org/src/file/ext/misc/appendvfs.c">VFS shim that allows a SQLite database to be appended to another file</a>
+                                    <a href="https://blog.ycombinator.com/hacker-news-highlights-april-may-2018/">Hacker News Highlights: April and May 2018</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17264629">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17268150">
                                         
-                                            44 comments
+                                            29 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=blacksqr">blacksqr</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528460878"
+                                            href="https://news.ycombinator.com/user?id=craigcannon">craigcannon</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528481245"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    150 points
+                                    151 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528509605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528510205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
