--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -221,7 +221,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17265458">
                                         
-                                            57 comments
+                                            58 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=codingcoop">codingcoop</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/view/articles/2018-06-07/america-s-startup-scene-is-looking-anemic">America's Startup Scene Is Looking Anemic</a>
+                                    <a href="https://www.theverge.com/platform/amp/2018/6/5/17424770/asus-zenbook-pro-screenpad-specs-release-date-price-computex-2018">Asus replaced the touchpad on its new ZenBook Pro with a 5.5-inch touchscreen</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17255569">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271126">
                                         
-                                            248 comments
+                                            104 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528378227"
+                                            href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528510212"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     147 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528538404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528539004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
