--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -413,7 +413,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17263565">
                                         
-                                            282 comments
+                                            283 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://webkit.org/blog/8311/intelligent-tracking-prevention-2-0/">Intelligent Tracking Prevention 2.0</a>
+                                    <a href="https://www.indiehackers.com/round-table/how-did-you-find-your-earliest-users">How to Find Your Earliest Users</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17230863">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17268363">
                                         
-                                            57 comments
+                                            40 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528138197"
+                                            href="https://news.ycombinator.com/user?id=ChanningAllen">ChanningAllen</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528482439"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     263 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528538404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528539004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
