--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lkml.org/lkml/2018/6/5/769">Torvalds: Standards need to be questioned</a>
+                                    <a href="https://github.com/higgsfield/RL-Adventure-2">Reinforcement Learning: From Zero to State of the Art with Pytorch 4</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17242103">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17261063">
                                         
-                                            172 comments
+                                            14 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=l1k">l1k</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528233068"
+                                            href="https://news.ycombinator.com/user?id=codentropy">codentropy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528411873"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     223 points
                                 </span>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://phys.org/news/2018-06-team-microbes-survive-rooms-contaminate.html">How microbes survive clean rooms and contaminate spacecraft</a>
+                                    <a href="https://lkml.org/lkml/2018/6/5/769">Torvalds: Standards need to be questioned</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17218831">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17242103">
                                         
-                                            67 comments
+                                            172 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528020146"
+                                            href="https://news.ycombinator.com/user?id=l1k">l1k</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528233068"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     223 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528539604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528540203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
