--- a/jobs/page6.html
+++ b/jobs/page6.html
@@ -99,6 +99,20 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17255418" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/jonpe960/ufsm/tree/ufsm-0.1.0">µFSM – A state chart library for embedded applications</a>
@@ -144,20 +158,6 @@
                                     <a href="https://news.ycombinator.com/item?id=17248436" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/jacobbogers/blasjs">Blasjs – Pure Javascript implementation of BLAS</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17256524" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.helprange.com">Track and Control Your PDFs</a>
                                 </span>
                             </td>
                         </tr>
@@ -469,7 +469,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528548604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528549204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
