--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=zeveb">zeveb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528484911"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    109 points
+                                    110 points
                                 </span>
                             </td>
                         </tr>
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.cdc.gov/vitalsigns/suicide/">Suicide rising across the US</a>
+                                    <a href="https://sketch.systems/">Sketch.systems</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17258701">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17270625">
                                         
-                                            188 comments
+                                            15 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=daegloe">daegloe</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528396082"
+                                            href="https://news.ycombinator.com/user?id=lebek">lebek</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528501213"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    107 points
+                                    108 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528550404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528551004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
