--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/quasar-framework/the-quasar-method-e19daf9abb5f">SPA, PWA, Electron and Cordova with Quasar in Six Minutes</a>
+                                    <a href="https://nanxiao.me/en/why-do-i-recommend-learning-c-plus-plus/">Why do I recommend learning C++?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17266244">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271445">
                                         
-                                            5 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rstoenescu">rstoenescu</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528470998"
+                                            href="https://news.ycombinator.com/user?id=nanxiao">nanxiao</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528516307"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    9 points
+                                    4 points
                                 </span>
                             </td>
                         </tr>
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gizmodo.com/two-quantum-computing-bills-are-coming-to-congress-1826674761">Two Quantum Computing Bills Are Coming to US Congress</a>
+                                    <a href="https://www.theguardian.com/commentisfree/2018/jun/08/save-planet-meat-dairy-livestock-food-free-range-steak">The best way to save the planet? Drop meat and dairy</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271056">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271110">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=neom">neom</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528508681"
+                                            href="https://news.ycombinator.com/user?id=sus_007">sus_007</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528509875"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    5 points
+                                    4 points
                                 </span>
                             </td>
                         </tr>
@@ -444,7 +444,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528557005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528557603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
